# ESP32-P4-Hearing-Translate-and-Directional-Obstacle-Warning-System-

./: README.md
board0/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
board0/components/audio_sr/: CMakeLists.txt  audio_sr.cpp  audio_sr.h
board0/components/ei_model/: CMakeLists.txt  README.txt
board0/components/ei_model/model-parameters/: model_metadata.h  model_variables.h
board0/components/ei_model/tflite-model/: tflite_learn_982734_6_compiled.cpp  tflite_learn_982734_6_compiled.h
board0/components/email_ui/: CMakeLists.txt  email_ui.c  email_ui.h
board0/components/music_player/: CMakeLists.txt  music_player.c  music_player.h
board0/components/uart_gesture/: CMakeLists.txt  uart_gesture.c  uart_gesture.h
board0/components/ui_speech/: CMakeLists.txt  cjk_cmd_32.c  ui_speech.c  ui_speech.h
board0/main/: CMakeLists.txt  idf_component.yml  idf_component_manager.yml  lvgl_adapter_init.c  main.c  smtp_client.c  smtp_client.h
board1/: .gitignore  CMakeLists.txt  build_idf.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.ov5647  sdkconfig.old  uart_read.ps1
board1/Mymodel/: export_latest_onnx.py  quantize_to_espdl.py  train_gesture_espdl.ipynb
board1/Mymodel/exports/: class_to_idx.json  gesture_cnn_224_gray.onnx  gesture_cnn_224_gray_esp32p4.info  gesture_cnn_224_gray_esp32p4.json  labels.txt  (+3 more)
board1/main/: CMakeLists.txt  Kconfig.projbuild  app_ethernet.c  app_ethernet.h  camera_capture.c  camera_capture.h  gesture_cnn_224_gray_esp32p4.espdl  gesture_cnn_96_gray_esp32p4.espdl  idf_component.yml  main.cpp  rtsp_service.c  video_dev.c  video_dev.h
board1/model-parameters/: model_metadata.h  model_variables.h
board1/tflite-model/: tflite_learn_1005809_3_compiled.cpp  tflite_learn_1005809_3_compiled.h  tflite_learn_1046963_3_compiled.cpp  tflite_learn_1046963_3_compiled.h  tflite_learn_1048423_7_compiled.cpp  tflite_learn_1048423_7_compiled.h
board1/tools/: collect_rtsp_dataset.py
(+2 files in other folders)
